# geotree

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: .#IntersectionPoint.cc  Axis.h  Calc.cc  Calc.h  Cube.cc  Cube.h  EdgePoint.cc  EdgePoint.cc~  EdgePoint.h  EdgePoint.h~  Face.cc  Face.h  Face2D.cc  Face2D.h  FaceDivide.cc  FaceDivide.h  FacePath2D.h  FacePoint.cc  FacePoint.h  FacesDivide.cc  FacesDivide.h  Geometry.cc  Geometry.h  Geotree  Geotree.cc  Geotree.h  Intersect.cc  Intersect.h  Intersection.cc  Intersection.h  IntersectionFace.cc  IntersectionFace.h  IntersectionPaths.cc  IntersectionPaths.h  IntersectionPoint.cc  IntersectionPoint.h  IntersectionPoints.cc  IntersectionPoints.h  Log.cc  Log.h  (+29 more)
test/: CMakeLists.txt  Validate.h  calc.cc  face.cc  face2d.cc  facedivide.cc  facepoint.cc  facesdivide.cc  geometry.cc  intersection.cc  intersectionface.cc  intersectionpaths.cc  intersectionpoint.cc  intersectionpoints.cc  intersections.cc  loop2d.cc  mesh.cc  meshdivide.cc  meshfactory.cc  meshintersection.cc  node.cc  path.cc  paths.cc  point.cc  segment.cc  test.cc  triangulate.cc  validate.cc
